# point-cloud-smasher

./: .gitignore  Bullet.tscn  PointCloud.tscn  World.tscn  pointcloudsmasher.gdnlib  project.godot
native/: .gitignore  CMakeLists.txt
native/src/: PointCloud.cpp  PointCloud.h  gdlibrary.cpp
scripts/: Bullet.gd  Camera.gd  PointCloud.gdns  PointCloudLoader.gd
